# strata-market-structure

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: manage.py
backend/apps/ai/: agents.py  api.py  apps.py  graph.py  models.py  prompts.py  schemas.py  services.py
backend/apps/auth_jwt/: api.py  apps.py  dependencies.py  keys.py  models.py  schemas.py  services.py
backend/apps/chart/: api.py  apps.py  backtest.py  models.py  schemas.py  services.py  structure.py  tasks.py
backend/apps/chat/: api.py  apps.py  models.py  schemas.py  services.py
backend/apps/stock/: api.py  apps.py  bybit.py  ingestion.py  models.py  schemas.py  tasks.py
backend/apps/users/: admin.py  api.py  models.py  schemas.py
backend/strata/: __init__.py  api.py  asgi.py  celery.py  logging.py  middleware.py  observability.py  settings.py  urls.py  wsgi.py
backend/tests/: conftest.py  test_ai_pipeline.py  test_bybit_client.py  test_structure_detection.py
docs/: architecture.md
frontend/: api_client.py  app.py  state.py
frontend/components/: auth.py  chart.py  chat.py  header.py  sidebar.py  summary.py
observability/: uwsgi.ini
scripts/: make_history.py  make_screenshots.py
