[project]
name = "strata"
version = "0.1.0"
description = "Crypto market-structure analyst — BoS / CHoCH / Wyckoff detection + multi-agent LLM briefings."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "vltech55" }]

dependencies = [
    # Web / API
    "django>=5.1",
    "django-ninja>=1.3",
    "uvicorn[standard]>=0.32",
    "uwsgi>=2.0.28; sys_platform != 'win32'",
    "django-cors-headers>=4.6",

    # Database
    "psycopg[binary,pool]>=3.2",

    # Schemas
    "pydantic>=2.9",
    "pydantic-settings>=2.6",

    # Background tasks
    "celery[redis]>=5.4",
    "redis>=5.2",
    "django-celery-beat>=2.7",
    "flower>=2.0",

    # Data / TA
    "pandas>=2.2",
    "numpy>=1.26,<2.2",
    "ta>=0.11",
    "pyarrow>=18.1",

    # LLM / AI
    "langchain>=0.3.7",
    "langchain-openai>=0.2.10",
    "langchain-core>=0.3.15",
    "langgraph>=0.2.50",
    "openai>=1.55",
    "langfuse>=2.50",

    # Frontend (kept here so a single venv runs both backend and Streamlit)
    "streamlit>=1.40",
    "streamlit-local-storage>=0.0.25",
    "plotly>=5.24",

    # Exchange
    "httpx>=0.27",
    "tenacity>=9.0",

    # Auth / crypto
    "python-jose[cryptography]>=3.3",
    "cryptography>=43.0",
    "passlib[bcrypt]>=1.7.4",

    # Object storage
    "boto3>=1.35",
    "minio>=7.2",

    # Observability
    "sentry-sdk[django]>=2.18",
    "opentelemetry-distro>=0.49b0",
    "opentelemetry-instrumentation-django>=0.49b0",
    "opentelemetry-instrumentation-celery>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-asyncio>=0.24",
    "factory-boy>=3.3",
    "freezegun>=1.5",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
    "django-stubs[compatible-mypy]>=5.1",
    "pre-commit>=4.0",
    "ipython>=8.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "strata.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["mypy_django_plugin.main"]
exclude = ["migrations/"]

[tool.django-stubs]
django_settings_module = "strata.settings"

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = ["migrations", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "F", "W",          # pycodestyle + pyflakes
    "I",                     # isort
    "B",                     # flake8-bugbear
    "UP",                    # pyupgrade
    "SIM",                   # flake8-simplify
    "RUF",                   # ruff-specific
    "DJ",                    # flake8-django
    "ASYNC",                 # flake8-async
]
ignore = ["E501", "B008"]    # line too long (handled by formatter), function-default-arg-call (FastAPI/ninja Depends pattern)

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["S101", "ARG"]
